cmake_minimum_required(VERSION 3.16)
project(CPewPew)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPewPew main.cpp)
add_executable(CPewPew_HelloWorld_1 HelloWorld_1.cpp)
add_executable(CPewPew_PrintingText_2 PrintingText_2.cpp)
add_executable(CPewPew_Variable_3 Variable_3.cpp)
add_executable(CPewPew_BasicCalculator_4 BasicCalculator_4.cpp)
add_executable(CPewPew_VariableMemory_5 VariableMemory_5.cpp)
add_executable(CPewPew_BasicArithmetic_6 BasicArithmetic_6.cpp)
add_executable(CPewPew_If_7 If_7.cpp)
add_executable(CPewPew_Functions_8 Functions_8.cpp)
add_executable(CPewPew_Functions_Param_9 Functions_Param_9.cpp)
add_executable(CPewPew_Functions_Params_10 Functions_Params_10.cpp)
add_executable(CPewPew_ClassesAndObjects_11 ClassesAndObjects_11.cpp)
add_executable(CPewPew_VariablesInClasses_12 VariablesInClasses_12.cpp)
add_executable(CPewPew_Constructor_13 Constructor_13.cpp)
add_executable(CPewPew_PlacingClassesinDifferentFiles_14 PlacingClassesinDifferentFiles_14.cpp Burrito.cpp Burrito.h)
add_executable(CPewPewIfElseStatement_15 IfElseStatement_15.cpp)
add_executable(CPewPewWhileLoop_16 WhileLoop_16.cpp)
add_executable(CPewPewProgramUsingLoops_17 ProgramUsingLoops_17.cpp)
add_executable(CPewPewSentinelControlledLoops_18 SentinelControlledLoops_18.cpp)
add_executable(CPewPewAssignmentIncrementOperator_19 AssignmentIncrementOperator_19.cpp)
add_executable(CPewPewForLoops_20 ForLoops_20.cpp)
add_executable(CPewPewStockMarketSimulator_21 StockMarketSimulator_21.cpp)
add_executable(CPewPewDoWhile_22 DoWhile_22.cpp)
add_executable(CPewPewSwitch_23 Switch_23.cpp)
add_executable(CPewPewLogicalOperator_24 LogicalOperator_24.cpp)
add_executable(CPewPewRandomNumberGenerator_25 RandomNumberGenerator_25.cpp)
add_executable(CPewPewDefault_Args_26 Default_Args_26.cpp)
add_executable(CPewPewScopeResolutionOperator_27 ScopeResolutionOperator_27.cpp)
add_executable(CPewPewFunctionOverloading_28 FunctionOverloading_28.cpp)
add_executable(CPewPewRecursion_29 Recursion_29.cpp)
add_executable(CPewPewArrays_30 Arrays_30.cpp)
add_executable(CPewPewArraysWithLoops_31 ArraysWithLoops_31.cpp)
add_executable(CPewPewArraysCalculation_32 ArraysCalculation_32.cpp)
add_executable(CPewPewArrayAsArgument_33 ArrayAsArgument_33.cpp)
add_executable(CPewPewMultiDimensionalArray_34 MultiDimensionalArray_34.cpp)
add_executable(CPewPewPrintingMDArrays_35 PrintingMDArrays_35.cpp)
add_executable(CPewPewPointers_36 Pointers_36.cpp)
add_executable(CPewPewPassByReference_37 PassByReference_37.cpp)
add_executable(CPewPewSizeOf_38 SizeOf_38.cpp)
add_executable(CPewPewPointersMath_39 PointersMath_39.cpp)
add_executable(CPewPewArrowMemberSelectionOperator_40 ArrowMemberSelectionOperator_40.cpp Sally.cpp Sally.h)
add_executable(CPewPewDeconstructor_41 Deconstructor_41.cpp Jihun_41.cpp Jihun_41.h)